--- a/exercicios/ex042/style.css
+++ b/exercicios/ex042/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 #q2 {
-    background-image: linear-gradient(to bottom yellow, red);
+    background-image: linear-gradient(to bottom yellow red);
 }
 
 #q3 {
