--- a/exercicios/ex042/style.css
+++ b/exercicios/ex042/style.css
@@ -22,6 +22,6 @@ div#q2 {
 }
 
 #q3 {
-    background-image: url("imagens/wallpaper003.jpg");
+    background-image: url("imagens/pattern003.png");
 }
 
