--- a/exercicios/desafios propostos/desafio013/estilo/style.css
+++ b/exercicios/desafios propostos/desafio013/estilo/style.css
@@ -1,13 +1,28 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+}
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", cursive;
+    --fonte3: "Sriracha", cursive;
 }
 
 html, body {
    min-height: 100vh; 
    background-color: darkgray;
+   font-family: var(--fonte1);
 }
 
 header {
@@ -17,8 +32,10 @@ header {
 }
 
 header > h1 {
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p {
@@ -36,6 +53,8 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
@@ -52,7 +71,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    color: white;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
