--- a/exercicios/desafios propostos/desafio014/estilo/style.css
+++ b/exercicios/desafios propostos/desafio014/estilo/style.css
@@ -10,7 +10,7 @@
 }
 
 root {
-    --fonte1: "Protest Strike", cursive;
+    --fonte1: "Protest Strike", sans-serif;
     --fonte2: ;
     --fonte3: ;
 }
