--- a/exercicios/desafios propostos/desafio014/estilo/style.css
+++ b/exercicios/desafios propostos/desafio014/estilo/style.css
@@ -61,6 +61,16 @@ main {
 }
 
 section {
-    text-align: center;
     color: var(--cor2);
+    text-align: center;
+    font-family: var(--fonte1);
+    font-size: 3.5vw;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
 }
+
+section > p {
+    padding-bottom: 2em;
+}
+
