--- a/exercicios/desafios propostos/desafio014/estilo/style.css
+++ b/exercicios/desafios propostos/desafio014/estilo/style.css
@@ -74,3 +74,29 @@ section > p {
     padding-bottom: 2em;
 }
 
+section.imagem {
+    color: white;
+    background-color: rgb(51, 51, 51);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img01 {
+    background-image: url("../imagens/circus-retro-poster-tent.jpg");
+    background-position: center center;
+}
+
+section#img02 {
+    background-image: url("../imagens/images.jpg");
+    background-position: top center;
+}
+
+section.imagem > p {
+    background-color: 0, 0, 0, 0.514;
+    text-shadow: 1px 1px 0px black;
+    display:inline-block;
+    margin: 20px;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.253);
+}
